--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "react": "19.1.0",
